# streamforge

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_initial.sql  002_alerts.sql  003_event_log.sql  004_tts_config.sql  005_alert_templates.sql
overlays/alerts/: alert.js  animations.css  animations.js  index.html  script.js  style.css  tts.js
overlays/shared/: socket-client.js
scripts/: build-server.js
server/: WEBSOCKET.md  config.js  database.js  index.js  package-lock.json  package.json
server/alerts/: database.js  logger.js  queue.js  templates.js
server/public/: test.html
server/routes/: alerts.js  events.js  settings.js  templates.js  test.js  upload.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: alertApi.ts  alerts.ts  config.ts  eventApi.ts  templateApi.ts
src/components/: BrowserSourceUrl.tsx  PageHeader.tsx  Sidebar.tsx  TestAlertPanel.tsx
src/components/alerts/: AlertEditor.tsx  AlertList.tsx  AlertPreview.tsx  ImagePicker.tsx  SoundPicker.tsx  TTSConfig.tsx  TemplatePicker.tsx  VariationEditor.tsx  VariationList.tsx
src/hooks/: useServerConnection.ts
src/pages/: Alerts.tsx  Dashboard.tsx  History.tsx  Settings.tsx  Themes.tsx  Widgets.tsx
src/stores/: alertStore.ts
