[package]
name = "streamforge"
version = "0.1.0"
description = "Open source self-hosted streaming toolkit"
authors = ["StreamForge Contributors"]
edition = "2021"

[lib]
name = "streamforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
